@@ -16,7 +16,7 @@ class named::service (
   assert_private()
 
   if $chroot {
-    if $facts['os']['name'] in ['RedHat','CentOS','OracleLinux','Rocky'] {
+    if $facts['os']['family'] == 'RedHat' {
       if (versioncmp($facts['os']['release']['major'],'7') < 0) {
         $svcname = 'named'
       }
@@ -33,7 +33,7 @@ class named::service (
   }
 
   # Work-around for https://bugzilla.redhat.com/show_bug.cgi?id=1278082
-  if $facts['os']['name'] in ['RedHat','CentOS','OracleLinux', 'Rocky'] and versioncmp($facts['os']['release']['major'],'7') >= 0 {
+  if $facts['os']['family'] == 'RedHat' and versioncmp($facts['os']['release']['major'],'7') >= 0 {
     # Override with a full replacement file, as we are changing the
     # Unit Requires and After lists and changing the Service Type
     # from forking to the default (simple).
